# TrioraCore

./: 1.patch
cmake/: options.cmake  showoptions.cmake
dep/: CMakeLists.txt
doc/: UnixInstall.txt
sql/base/: auth_database.sql  characters_database.sql  world_database.sql
sql/scripts/: world_script_texts.sql  world_scripts_full.sql
sql/updates/: 14_world_spell_bonus_data.sql  18_world_command.sql  18_world_trinity_string.sql  1_characters_cheat_first_report.sql  1_characters_cheat_reports.sql  1_characters_cheat_temp_reports.sql  21_auth_account.sql  29_world_scriptname.sql  32_world_script_text.sql  32_world_scriptname.sql  33_world_script_text.sql  33_world_scriptname.sql  38_world_scriptname.sql  5_world_scriptname.sql  5_world_trinity_string.sql
src/server/: CMakeLists.txt
src/server/authserver/: authserver.conf.dist
src/server/game/: CMakeLists.txt
src/server/game/Globals/: ObjectMgr.h
src/server/game/Miscellaneous/: Language.h
src/server/game/OutdoorPvP/: OutdoorPvP.h  OutdoorPvPMgr.cpp
src/server/game/Scripting/: ScriptLoader.cpp
src/server/game/Spells/: Spell.cpp  SpellEffects.cpp  SpellMgr.cpp
src/server/game/World/: World.cpp  World.h
src/server/scripts/: CMakeLists.txt
src/server/scripts/Commands/: cs_gm.cpp
src/server/scripts/Northrend/: CMakeLists.txt  dalaran.cpp  icecrown.cpp  wintergrasp.cpp
src/server/scripts/OutdoorPvP/: OutdoorPvPWG.cpp  OutdoorPvPWG.h
src/server/scripts/World/: go_scripts.cpp  item_scripts.cpp  (+1 more)
src/server/shared/: Common.h  SystemConfig.h
src/server/worldserver/: worldserver.conf.dist
(+16 files in other folders)
